@@ -10,6 +10,7 @@
   * We will always mount / as the first mountpoint.
   * Set the size limit of /dev/shm when memory limit is set.
   * Fix crash on capget().
+  * Fix unshare container when pivot_root failed.
   * Fix qemu path when we pre-mount the rootfs from other source.
   * Add autotest.
   * Fix memory issues.
